// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudioPlayer should change states depending on whether the audio is playing, paused, or finished 1`] = `
<div>
  <div
    class="flex items-center gap-1 text-2xl text-amber-900 dark:text-orange-300"
  >
    <button
      aria-label="inputs.play_audio_aria title text"
      class="h-8 w-8 flex items-center justify-center"
      data-testid="audio-player-play-button"
      title="inputs.play_audio_aria title text"
    >
      <div>
        play circle outline
      </div>
    </button>
    <code
      class="text-xs"
      title="inputs.audio_time_elapsed_title title text"
    >
      00:00
    </code>
    <input
      aria-label="inputs.audio_scrubber_aria title text"
      class="c-audio-player__scrubber"
      min="0"
      step="0.1"
      type="range"
      value="0"
    />
    <code
      class="text-xs"
      title="inputs.audio_time_total_title title text"
    >
      00:00
    </code>
    <div
      class="relative"
    >
      <button
        aria-label="inputs.change_playback_speed_aria title text"
        class="h-8 w-8 flex items-center justify-center"
        data-testid="audio-player-speed-button"
        title="inputs.change_playback_speed_aria title text"
      >
        <div>
          speed
        </div>
      </button>
      <ul
        aria-hidden="true"
        aria-label="inputs.audio_speed_menu_label title text"
        class="absolute p-3 bg-amber-50 shadow-lg rounded-sm border-[1px] border-amber-900 dark:bg-stone-950 dark:border-orange-300"
        data-testid="audio-player-speed-menu"
        hidden=""
        role="menu"
      >
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 0.25"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-0"
          role="menuitemradio"
          tabindex="0"
        >
          0.25x
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 0.5"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-1"
          role="menuitemradio"
          tabindex="0"
        >
          0.5x
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 0.75"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-2"
          role="menuitemradio"
          tabindex="0"
        >
          0.75x
        </li>
        <li
          aria-checked="true"
          aria-label="inputs.audio_speed_item_label 1"
          class="font-bold text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-3"
          role="menuitemradio"
          tabindex="0"
        >
          global.normal
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 1.25"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-4"
          role="menuitemradio"
          tabindex="0"
        >
          1.25x
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 1.5"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-5"
          role="menuitemradio"
          tabindex="0"
        >
          1.5x
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 1.75"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-6"
          role="menuitemradio"
          tabindex="0"
        >
          1.75x
        </li>
      </ul>
    </div>
  </div>
  <audio
    aria-labelledby="labelled by text"
    controls=""
    data-testid="audio-player-audio-element"
    hidden=""
    src="src text"
  />
</div>
`;

exports[`AudioPlayer should change states depending on whether the audio is playing, paused, or finished 2`] = `
<div>
  <div
    class="flex items-center gap-1 text-2xl text-amber-900 dark:text-orange-300"
  >
    <button
      aria-label="inputs.pause_audio_aria title text"
      class="h-8 w-8 flex items-center justify-center"
      data-testid="audio-player-play-button"
      title="inputs.pause_audio_aria title text"
    >
      <div>
        pause circle outline
      </div>
    </button>
    <code
      class="text-xs"
      title="inputs.audio_time_elapsed_title title text"
    >
      00:00
    </code>
    <input
      aria-label="inputs.audio_scrubber_aria title text"
      class="c-audio-player__scrubber"
      min="0"
      step="0.1"
      type="range"
      value="0"
    />
    <code
      class="text-xs"
      title="inputs.audio_time_total_title title text"
    >
      00:00
    </code>
    <div
      class="relative"
    >
      <button
        aria-label="inputs.change_playback_speed_aria title text"
        class="h-8 w-8 flex items-center justify-center"
        data-testid="audio-player-speed-button"
        title="inputs.change_playback_speed_aria title text"
      >
        <div>
          speed
        </div>
      </button>
      <ul
        aria-hidden="true"
        aria-label="inputs.audio_speed_menu_label title text"
        class="absolute p-3 bg-amber-50 shadow-lg rounded-sm border-[1px] border-amber-900 dark:bg-stone-950 dark:border-orange-300"
        data-testid="audio-player-speed-menu"
        hidden=""
        role="menu"
      >
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 0.25"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-0"
          role="menuitemradio"
          tabindex="0"
        >
          0.25x
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 0.5"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-1"
          role="menuitemradio"
          tabindex="0"
        >
          0.5x
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 0.75"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-2"
          role="menuitemradio"
          tabindex="0"
        >
          0.75x
        </li>
        <li
          aria-checked="true"
          aria-label="inputs.audio_speed_item_label 1"
          class="font-bold text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-3"
          role="menuitemradio"
          tabindex="0"
        >
          global.normal
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 1.25"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-4"
          role="menuitemradio"
          tabindex="0"
        >
          1.25x
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 1.5"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-5"
          role="menuitemradio"
          tabindex="0"
        >
          1.5x
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 1.75"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-6"
          role="menuitemradio"
          tabindex="0"
        >
          1.75x
        </li>
      </ul>
    </div>
  </div>
  <audio
    aria-labelledby="labelled by text"
    controls=""
    data-testid="audio-player-audio-element"
    hidden=""
    src="src text"
  />
</div>
`;

exports[`AudioPlayer should change states depending on whether the audio is playing, paused, or finished 3`] = `
<div>
  <div
    class="flex items-center gap-1 text-2xl text-amber-900 dark:text-orange-300"
  >
    <button
      aria-label="inputs.restart_audio_aria title text"
      class="h-8 w-8 flex items-center justify-center"
      data-testid="audio-player-play-button"
      title="inputs.restart_audio_aria title text"
    >
      <div>
        restart alt
      </div>
    </button>
    <code
      class="text-xs"
      title="inputs.audio_time_elapsed_title title text"
    >
      00:00
    </code>
    <input
      aria-label="inputs.audio_scrubber_aria title text"
      class="c-audio-player__scrubber"
      min="0"
      step="0.1"
      type="range"
      value="0"
    />
    <code
      class="text-xs"
      title="inputs.audio_time_total_title title text"
    >
      00:00
    </code>
    <div
      class="relative"
    >
      <button
        aria-label="inputs.change_playback_speed_aria title text"
        class="h-8 w-8 flex items-center justify-center"
        data-testid="audio-player-speed-button"
        title="inputs.change_playback_speed_aria title text"
      >
        <div>
          speed
        </div>
      </button>
      <ul
        aria-hidden="true"
        aria-label="inputs.audio_speed_menu_label title text"
        class="absolute p-3 bg-amber-50 shadow-lg rounded-sm border-[1px] border-amber-900 dark:bg-stone-950 dark:border-orange-300"
        data-testid="audio-player-speed-menu"
        hidden=""
        role="menu"
      >
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 0.25"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-0"
          role="menuitemradio"
          tabindex="0"
        >
          0.25x
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 0.5"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-1"
          role="menuitemradio"
          tabindex="0"
        >
          0.5x
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 0.75"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-2"
          role="menuitemradio"
          tabindex="0"
        >
          0.75x
        </li>
        <li
          aria-checked="true"
          aria-label="inputs.audio_speed_item_label 1"
          class="font-bold text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-3"
          role="menuitemradio"
          tabindex="0"
        >
          global.normal
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 1.25"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-4"
          role="menuitemradio"
          tabindex="0"
        >
          1.25x
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 1.5"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-5"
          role="menuitemradio"
          tabindex="0"
        >
          1.5x
        </li>
        <li
          aria-checked="false"
          aria-label="inputs.audio_speed_item_label 1.75"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-6"
          role="menuitemradio"
          tabindex="0"
        >
          1.75x
        </li>
      </ul>
    </div>
  </div>
  <audio
    aria-labelledby="labelled by text"
    controls=""
    data-testid="audio-player-audio-element"
    hidden=""
    src="src text"
  />
</div>
`;
